--- a/Assignments/assign1.html
+++ b/Assignments/assign1.html
@@ -136,7 +136,7 @@ main()
     </div>
     <div class="instruction">
     <p>For best animation effect, set subdivison to 5, click  in the rotation slider, and then use left or right arrow
-    keys to rotate the figure. Counter clockwise wise rotation is postive. </p>
+    keys to rotate the figure. Counter clockwise  rotation is postive. </p>
     </div>
     
   </div>
