--- a/Assignments/hw2.html
+++ b/Assignments/hw2.html
@@ -103,9 +103,9 @@
             <button id="clearCanvas" onclick="clearCanvas()";>Clear Canvas</button>
             </div>
             <div class="text">
-            <p>When using Chrome browser if you by chance step out side the canvas while the mouse button is still down, please click it once 
-            before resuming drawing inside the canvas, else the behavior  is inconsistent. 
-            This bug is not present in  Firefox or IE, so they should be  alright.</p>
+            <p>In Chrome while drawing if you by chance step out side the canvas with mouse button  still down, please click it once 
+            outside the canvas before resuming drawing, else the behavior may be inconsistent. 
+            This bug is not present in  Firefox or IE, so they should be  ok.</p>
             </div>
         </div>
     </div>
