Let's try again!

--- a/Assignment5/hw5.html
+++ b/Assignment5/hw5.html
@@ -147,12 +147,12 @@
      }
 </script>
 
-<script src="gl-matrix-min.js"></script>
+<script src="script/gl-matrix-min.js"></script>
 <script src="script/simple-rotator.js"></script>
-<script src="script/webgl/trackball-rotator.js"></script>
-<script src="models.js"></script>
+<script src="script/trackball-rotator.js"></script>
+<script src="script/models.js"></script>
 <script src="script/demo-core.js"></script>
-<script src="jquery-min.js"></script>
+<script src="script/jquery-min.js"></script>
 
 <script>
 var canvas;
@@ -712,7 +712,7 @@ function init() {
 </div>
 
 <div id="tools">
-<p><label><b>Object:</b><br>
+<p><label><b>Objects:</b><br>
 <select id="object">
     <option value="0">Sphere</option>
     <option value="1">Cylinder</option>
