O.k. may be last!

--- a/Assignment5/hw5.html
+++ b/Assignment5/hw5.html
@@ -748,7 +748,7 @@ function init() {
         </select></label></p>
             
         <p><button id="reset">Reset Scene</button></p>
-        <p class="ins"> Use Mouse To Rotate</p>
+        <p class="ins"> Please Use Mouse To Rotate</p>
         <p class="notes"> The texture images may take a few seconds load or little more in case of Enviroment mapping,
         please be patient!</p>
     </div>
