Absolutely last upload,

--- a/Assignment5/hw5.html
+++ b/Assignment5/hw5.html
@@ -749,7 +749,7 @@ function init() {
             
         <p><button id="reset">Reset Scene</button></p>
         <p class="ins"> Please Use Mouse To Rotate</p>
-        <p class="notes"> The texture images may take a few seconds load or little more in case of Enviroment mapping,
+        <p class="notes"> The texture images may take a few seconds to load or little more in case of Environment mapping,
         please be patient!</p>
     </div>
 
