--- a/web-design-project/gallery.html
+++ b/web-design-project/gallery.html
@@ -54,7 +54,10 @@
   <div class="container">
     <div class="heading">
       <h2>Events Gallery/Slide Show</h2>
+      <p> Please click on a image to start the slideshow. Use the left/right arrows to navigate.
+      The slideshow terminates on the first and last images. </p>
     </div>
+    
     <div id="grid-gallery" class="grid-gallery">
       <section class="grid-wrap">
         <ul class="grid" id="grd">
