--- a/web-design-project/index.html
+++ b/web-design-project/index.html
@@ -80,7 +80,8 @@
     </div>
 	
 	<div class="col-sm-6 col-md-4">
-      <div class="thumbnail nbdr"> <img   src="images/portrait.jpg" alt="Portrait Photo">
+      <div class="thumbnail nbdr">
+      <img   src="images/portrait.jpg" alt="Portrait Photo">
         <div class="caption">
           <h3 class="media-heading">Portrait</h3>
           <p>Every photo studio wants to take that perfect portrait. We are no exceptions.
@@ -93,7 +94,7 @@
 		<div class="thumbnail nbdr"> 
 			<img src="images/events.jpg" alt="Events Photo">
 			<div class="caption">
-				<h3>Events</h3>
+				<h3 class="media-heading">Events</h3>
 				<p> Events are also one of our speciality. Our  photographers have a keen eye for the
 				occasions, they capture  the right moments!
 				</p>
